Refactor server management: split serve.go into server.go and enhance command structure
- Removed serve.go and migrated its functionality to server.go.
- Introduced a new command structure for managing the vget HTTP server.
- Added subcommands for starting, stopping, restarting, checking status, viewing logs, and installing/uninstalling as a systemd service.
- Enhanced daemon management with improved logging and PID file handling.
- Implemented interactive TUI for service installation configuration.
- Updated command flags and help messages for clarity and usability.

--- a/.air.toml
+++ b/.air.toml
@@ -1,7 +1,7 @@
 #:schema false
 # .air.toml - Hot reload config for development
 # Install: go install github.com/air-verse/air@latest
-# Usage: air -- serve
+# Usage: air -- server start
 
 root = "."
 tmp_dir = "tmp"
