feat: add placeholder creation for embed in CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,9 @@ jobs:
         with:
           go-version: "1.25.4"
 
+      - name: Create placeholder for embed
+        run: mkdir -p internal/server/dist && touch internal/server/dist/.gitkeep
+
       - name: Run tests
         run: go test -v ./...
 
