--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   test:
-    name: Test & Lint
+    name: Test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: "1.25.4"
+          go-version-file: go.mod
 
       - name: Create placeholder for embed
         run: mkdir -p internal/server/dist && touch internal/server/dist/.gitkeep
@@ -24,8 +24,21 @@ jobs:
       - name: Run tests
         run: go test -v ./...
 
-      - name: Install staticcheck
-        run: go install honnef.co/go/tools/cmd/staticcheck@latest
+  lint:
+    name: Lint
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version-file: go.mod
+
+      - name: Create placeholder for embed
+        run: mkdir -p internal/server/dist && touch internal/server/dist/.gitkeep
 
       - name: Run staticcheck
-        run: staticcheck ./...
+        uses: dominikh/staticcheck-action@v1
+        with:
+          version: "latest"
