--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,87 +71,257 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  docker-amd64:
+  # Build Docker images with different whisper models bundled
+  # Image variants:
+  #   :latest - no model, downloads on first use (~150MB)
+  #   :small  - ggml-small.bin for NAS <8GB RAM (~400MB)
+  #   :medium - ggml-medium.bin for 8-16GB RAM (~900MB)
+  #   :large  - ggml-large-v3-turbo.bin for GPU users (~1.7GB)
+
+  # AMD64 builds
+  docker-amd64-latest:
     runs-on: ubuntu-latest
     outputs:
       digest: ${{ steps.build.outputs.digest }}
     steps:
-      - name: Checkout
-        uses: actions/checkout@v5
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
+      - uses: actions/checkout@v5
+      - uses: docker/setup-buildx-action@v3
+      - uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build and push by digest
+      - name: Build and push
         id: build
         uses: docker/build-push-action@v6
         with:
           context: .
+          file: ./docker/vget/Dockerfile
           platforms: linux/amd64
+          build-args: WHISPER_MODEL=none
           outputs: type=image,name=ghcr.io/${{ github.repository }},push-by-digest=true,name-canonical=true,push=true
-          cache-from: type=gha,scope=amd64
-          cache-to: type=gha,scope=amd64,mode=max
+          cache-from: type=gha,scope=amd64-latest
+          cache-to: type=gha,scope=amd64-latest,mode=max
 
-  docker-arm64:
+  docker-amd64-small:
+    runs-on: ubuntu-latest
+    outputs:
+      digest: ${{ steps.build.outputs.digest }}
+    steps:
+      - uses: actions/checkout@v5
+      - uses: docker/setup-buildx-action@v3
+      - uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build and push
+        id: build
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: ./docker/vget/Dockerfile
+          platforms: linux/amd64
+          build-args: WHISPER_MODEL=small
+          outputs: type=image,name=ghcr.io/${{ github.repository }},push-by-digest=true,name-canonical=true,push=true
+          cache-from: type=gha,scope=amd64-small
+          cache-to: type=gha,scope=amd64-small,mode=max
+
+  docker-amd64-medium:
+    runs-on: ubuntu-latest
+    outputs:
+      digest: ${{ steps.build.outputs.digest }}
+    steps:
+      - uses: actions/checkout@v5
+      - uses: docker/setup-buildx-action@v3
+      - uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build and push
+        id: build
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: ./docker/vget/Dockerfile
+          platforms: linux/amd64
+          build-args: WHISPER_MODEL=medium
+          outputs: type=image,name=ghcr.io/${{ github.repository }},push-by-digest=true,name-canonical=true,push=true
+          cache-from: type=gha,scope=amd64-medium
+          cache-to: type=gha,scope=amd64-medium,mode=max
+
+  docker-amd64-large:
+    runs-on: ubuntu-latest
+    outputs:
+      digest: ${{ steps.build.outputs.digest }}
+    steps:
+      - uses: actions/checkout@v5
+      - uses: docker/setup-buildx-action@v3
+      - uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build and push
+        id: build
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: ./docker/vget/Dockerfile
+          platforms: linux/amd64
+          build-args: WHISPER_MODEL=large
+          outputs: type=image,name=ghcr.io/${{ github.repository }},push-by-digest=true,name-canonical=true,push=true
+          cache-from: type=gha,scope=amd64-large
+          cache-to: type=gha,scope=amd64-large,mode=max
+
+  # ARM64 builds
+  docker-arm64-latest:
     runs-on: ubuntu-24.04-arm
     outputs:
       digest: ${{ steps.build.outputs.digest }}
     steps:
-      - name: Checkout
-        uses: actions/checkout@v5
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
+      - uses: actions/checkout@v5
+      - uses: docker/setup-buildx-action@v3
+      - uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build and push by digest
+      - name: Build and push
         id: build
         uses: docker/build-push-action@v6
         with:
           context: .
+          file: ./docker/vget/Dockerfile
           platforms: linux/arm64
+          build-args: WHISPER_MODEL=none
           outputs: type=image,name=ghcr.io/${{ github.repository }},push-by-digest=true,name-canonical=true,push=true
-          cache-from: type=gha,scope=arm64
-          cache-to: type=gha,scope=arm64,mode=max
+          cache-from: type=gha,scope=arm64-latest
+          cache-to: type=gha,scope=arm64-latest,mode=max
 
+  docker-arm64-small:
+    runs-on: ubuntu-24.04-arm
+    outputs:
+      digest: ${{ steps.build.outputs.digest }}
+    steps:
+      - uses: actions/checkout@v5
+      - uses: docker/setup-buildx-action@v3
+      - uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build and push
+        id: build
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: ./docker/vget/Dockerfile
+          platforms: linux/arm64
+          build-args: WHISPER_MODEL=small
+          outputs: type=image,name=ghcr.io/${{ github.repository }},push-by-digest=true,name-canonical=true,push=true
+          cache-from: type=gha,scope=arm64-small
+          cache-to: type=gha,scope=arm64-small,mode=max
+
+  docker-arm64-medium:
+    runs-on: ubuntu-24.04-arm
+    outputs:
+      digest: ${{ steps.build.outputs.digest }}
+    steps:
+      - uses: actions/checkout@v5
+      - uses: docker/setup-buildx-action@v3
+      - uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build and push
+        id: build
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: ./docker/vget/Dockerfile
+          platforms: linux/arm64
+          build-args: WHISPER_MODEL=medium
+          outputs: type=image,name=ghcr.io/${{ github.repository }},push-by-digest=true,name-canonical=true,push=true
+          cache-from: type=gha,scope=arm64-medium
+          cache-to: type=gha,scope=arm64-medium,mode=max
+
+  docker-arm64-large:
+    runs-on: ubuntu-24.04-arm
+    outputs:
+      digest: ${{ steps.build.outputs.digest }}
+    steps:
+      - uses: actions/checkout@v5
+      - uses: docker/setup-buildx-action@v3
+      - uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build and push
+        id: build
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: ./docker/vget/Dockerfile
+          platforms: linux/arm64
+          build-args: WHISPER_MODEL=large
+          outputs: type=image,name=ghcr.io/${{ github.repository }},push-by-digest=true,name-canonical=true,push=true
+          cache-from: type=gha,scope=arm64-large
+          cache-to: type=gha,scope=arm64-large,mode=max
+
+  # Create multi-arch manifests for all variants
   docker-manifest:
     runs-on: ubuntu-latest
-    needs: [docker-amd64, docker-arm64]
+    needs:
+      - docker-amd64-latest
+      - docker-amd64-small
+      - docker-amd64-medium
+      - docker-amd64-large
+      - docker-arm64-latest
+      - docker-arm64-small
+      - docker-arm64-medium
+      - docker-arm64-large
     steps:
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
+      - uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract metadata
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ghcr.io/${{ github.repository }}
-          tags: |
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=raw,value=latest
+      - name: Extract version
+        id: version
+        run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
 
-      - name: Create and push manifest
+      - name: Create manifests
         run: |
-          for tag in $(echo "${{ steps.meta.outputs.tags }}" | tr ',' '\n'); do
-            docker buildx imagetools create -t "$tag" \
-              "ghcr.io/${{ github.repository }}@${{ needs.docker-amd64.outputs.digest }}" \
-              "ghcr.io/${{ github.repository }}@${{ needs.docker-arm64.outputs.digest }}"
-          done
+          IMAGE="ghcr.io/${{ github.repository }}"
+          VERSION="${{ steps.version.outputs.VERSION }}"
+
+          # :latest (no model)
+          docker buildx imagetools create -t "$IMAGE:latest" -t "$IMAGE:$VERSION" \
+            "$IMAGE@${{ needs.docker-amd64-latest.outputs.digest }}" \
+            "$IMAGE@${{ needs.docker-arm64-latest.outputs.digest }}"
+
+          # :small (for NAS <8GB RAM)
+          docker buildx imagetools create -t "$IMAGE:small" -t "$IMAGE:$VERSION-small" \
+            "$IMAGE@${{ needs.docker-amd64-small.outputs.digest }}" \
+            "$IMAGE@${{ needs.docker-arm64-small.outputs.digest }}"
+
+          # :medium (for 8-16GB RAM)
+          docker buildx imagetools create -t "$IMAGE:medium" -t "$IMAGE:$VERSION-medium" \
+            "$IMAGE@${{ needs.docker-amd64-medium.outputs.digest }}" \
+            "$IMAGE@${{ needs.docker-arm64-medium.outputs.digest }}"
+
+          # :large (for GPU users)
+          docker buildx imagetools create -t "$IMAGE:large" -t "$IMAGE:$VERSION-large" \
+            "$IMAGE@${{ needs.docker-amd64-large.outputs.digest }}" \
+            "$IMAGE@${{ needs.docker-arm64-large.outputs.digest }}"
+
+          echo "✅ Published images:"
+          echo "  - $IMAGE:latest / $IMAGE:$VERSION"
+          echo "  - $IMAGE:small / $IMAGE:$VERSION-small"
+          echo "  - $IMAGE:medium / $IMAGE:$VERSION-medium"
+          echo "  - $IMAGE:large / $IMAGE:$VERSION-large"
